[gd_scene load_steps=32 format=3 uid="uid://csinpw556o7ux"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_4j5bp"]
[ext_resource type="Texture2D" uid="uid://cb4a45ces2cnk" path="res://sprites/knight3.0.png" id="2_mrnfa"]
[ext_resource type="Texture2D" uid="uid://ccbfxx0xmcfgf" path="res://sprites/short_sword.png" id="3_navsb"]
[ext_resource type="PackedScene" uid="uid://dsdts71tmlke5" path="res://scenes/damage_zone.tscn" id="4_u465u"]
[ext_resource type="AudioStream" uid="uid://cg4mkt8a0yb82" path="res://sounds/weapon_swing6.wav" id="4_xgjfg"]
[ext_resource type="AudioStream" uid="uid://dr16khaikgudr" path="res://sounds/hit-swing-sword-small.wav" id="5_o0uxe"]
[ext_resource type="AudioStream" uid="uid://d13o0qlhyhqs1" path="res://sounds/695384__fmaudio__male-death-cry-1.wav" id="7_tqos6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y1hdt"]
radius = 109.005

[sub_resource type="CircleShape2D" id="CircleShape2D_yqexy"]
radius = 53.1507

[sub_resource type="Animation" id="Animation_jv00t"]
resource_name = "Idle"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/LongSword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(116, 96), Vector2(136, 87)]
}

[sub_resource type="Animation" id="Animation_7u53w"]
resource_name = "Idle_2"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/LongSword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(130, 58)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/LongSword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_1ea80"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/LongSword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(139, 83)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/LongSword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_bsl3y"]
resource_name = "dying"
length = 1.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_death"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_emit_hero_death"
}]
}

[sub_resource type="Animation" id="Animation_7vio4"]
resource_name = "stun"
loop_mode = 1

[sub_resource type="Animation" id="Animation_520qt"]
resource_name = "swap"
length = 0.4
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/LongSword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.14, 0.16, 0.18, 0.22, 0.34, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-64, 175), Vector2(-64, 175), Vector2(156, 130), Vector2(198, -3), Vector2(125, -151), Vector2(33, -196), Vector2(-52, -173), Vector2(-66, -163)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/LongSword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.14, 0.16, 0.18, 0.22, 0.34, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [2.37193, 2.37193, 0.692502, -0.0423344, -0.871355, -1.52262, -2.16964, -2.30237]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.12),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_sword_swing"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/damage_zone:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.14, 0.18),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_jxbro"]
resource_name = "walk"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/LongSword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(139, 83), Vector2(199, 38)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/LongSword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.334249]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_805h5"]
_data = {
"Idle": SubResource("Animation_jv00t"),
"Idle_2": SubResource("Animation_7u53w"),
"RESET": SubResource("Animation_1ea80"),
"dying": SubResource("Animation_bsl3y"),
"stun": SubResource("Animation_7vio4"),
"swap": SubResource("Animation_520qt"),
"walk": SubResource("Animation_jxbro")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_llu4x"]
animation = &"Idle_2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x5wc5"]
animation = &"dying"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yx11l"]
animation = &"stun"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_64u58"]
animation = &"swap"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1e758"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_narhr"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8hqpa"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qtrgo"]
advance_mode = 2
advance_condition = &"stun"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bqvsw"]
advance_mode = 2
advance_condition = &"stun"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2w0km"]
advance_mode = 2
advance_condition = &"unstun"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sjiku"]
advance_mode = 2
advance_condition = &"dying"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m6k5h"]
advance_mode = 2
advance_condition = &"dying"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4cxf5"]
advance_mode = 2
advance_condition = &"dying"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_07lbm"]
states/Idle_2/node = SubResource("AnimationNodeAnimation_llu4x")
states/Idle_2/position = Vector2(452.165, 100.056)
states/Start/position = Vector2(202.5, 99.75)
states/dying/node = SubResource("AnimationNodeAnimation_x5wc5")
states/dying/position = Vector2(683.21, 56.5448)
states/stun/node = SubResource("AnimationNodeAnimation_yx11l")
states/stun/position = Vector2(640.81, 180.202)
states/swap/node = SubResource("AnimationNodeAnimation_64u58")
states/swap/position = Vector2(458.81, 248.202)
transitions = ["Start", "Idle_2", SubResource("AnimationNodeStateMachineTransition_1e758"), "Idle_2", "swap", SubResource("AnimationNodeStateMachineTransition_narhr"), "swap", "Idle_2", SubResource("AnimationNodeStateMachineTransition_8hqpa"), "swap", "stun", SubResource("AnimationNodeStateMachineTransition_qtrgo"), "Idle_2", "stun", SubResource("AnimationNodeStateMachineTransition_bqvsw"), "stun", "Idle_2", SubResource("AnimationNodeStateMachineTransition_2w0km"), "Idle_2", "dying", SubResource("AnimationNodeStateMachineTransition_sjiku"), "stun", "dying", SubResource("AnimationNodeStateMachineTransition_m6k5h"), "swap", "dying", SubResource("AnimationNodeStateMachineTransition_4cxf5")]
graph_offset = Vector2(320.625, 15.0373)

[node name="Player" type="CharacterBody2D" groups=["human"]]
script = ExtResource("1_4j5bp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_mrnfa")
region_rect = Rect2(512, 256, 128, 128)

[node name="LongSword" type="Sprite2D" parent="Sprite2D"]
z_index = -1
position = Vector2(139, 83)
texture = ExtResource("3_navsb")
region_rect = Rect2(0, 0, 256, 128)

[node name="damage_zone" parent="Sprite2D" node_paths=PackedStringArray("sound") instance=ExtResource("4_u465u")]
sound = NodePath("../../sword_hit")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/damage_zone"]
position = Vector2(171, -11)
shape = SubResource("CircleShape2D_y1hdt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yqexy")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_805h5")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_805h5")
}
tree_root = SubResource("AnimationNodeStateMachine_07lbm")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/attack = false
parameters/conditions/dying = false
parameters/conditions/stun = false
parameters/conditions/unstun = false

[node name="sword_swing_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_xgjfg")
bus = &"SFX"

[node name="sword_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_o0uxe")
volume_db = 5.0
bus = &"SFX"

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_tqos6")
bus = &"SFX"
